[gd_scene load_steps=32 format=3 uid="uid://c2f8xyyh8tty"]

[ext_resource type="Script" uid="uid://j7ac7psio3ml" path="res://Player/player.gd" id="1_mxfy5"]
[ext_resource type="Texture2D" uid="uid://castomql0c7at" path="res://Textures/Player/player_sprite.png" id="1_pvsr5"]
[ext_resource type="PackedScene" uid="uid://c5vt11nsnlxlq" path="res://Utility/hurtbox.tscn" id="3_27lpr"]
[ext_resource type="PackedScene" uid="uid://d2mnx5ynyt0s1" path="res://Player/attack/weapons/curseor.tscn" id="6_gu6f8"]
[ext_resource type="Theme" uid="uid://d1migwmo8e8th" path="res://Utility/UI/base_theme.tres" id="7_00tjw"]
[ext_resource type="PackedScene" uid="uid://glsvqpekrn7t" path="res://Player/attack/weapons/weapon_staff.tscn" id="7_dkpta"]
[ext_resource type="Texture2D" uid="uid://bsbcuwx7sx3d" path="res://Textures/GUI/exp_background.png" id="7_i86py"]
[ext_resource type="Texture2D" uid="uid://dl0v6xel2fdku" path="res://Textures/GUI/exp_progress.png" id="8_08krr"]
[ext_resource type="PackedScene" uid="uid://d2gxo6e2qct1t" path="res://Player/attack/weapons/weapon_sword.tscn" id="8_lfmf2"]
[ext_resource type="PackedScene" uid="uid://bqlafqinv155r" path="res://Player/attack/weapons/bubble_blaster.tscn" id="8_p5o4e"]
[ext_resource type="Texture2D" uid="uid://xqalqsq7mq3e" path="res://Textures/GUI/hpBar_background.png" id="9_5htga"]
[ext_resource type="PackedScene" uid="uid://c4omo0hra775t" path="res://Player/upgrades/chestplate.tscn" id="9_gu6f8"]
[ext_resource type="PackedScene" uid="uid://tc86pe2gbuq2" path="res://Player/attack/weapons/weapon_whip.tscn" id="9_pisgm"]
[ext_resource type="PackedScene" uid="uid://b3xm851if28ef" path="res://Player/attack/weapons/curse_sword.tscn" id="10_lfmf2"]
[ext_resource type="Texture2D" uid="uid://cl5ap5wh3r6sy" path="res://Textures/GUI/hpBar_progress.png" id="10_p5o4e"]
[ext_resource type="PackedScene" uid="uid://c6ogq7jy2ct4b" path="res://Player/upgrades/ring_of_vitality.tscn" id="10_pisgm"]
[ext_resource type="PackedScene" uid="uid://nc14btalujn5" path="res://Player/upgrades/magnet_upgrade.tscn" id="11_7emwf"]
[ext_resource type="PackedScene" uid="uid://vy5g6ukxbfe4" path="res://Player/upgrades/band_of_regen.tscn" id="12_o28un"]
[ext_resource type="PackedScene" uid="uid://ckrl10ablv2h2" path="res://Player/upgrades/coffee_cup.tscn" id="13_n471f"]
[ext_resource type="PackedScene" uid="uid://ceynjy5ryega0" path="res://Utility/UI/pause_menu.tscn" id="15_dkpta"]
[ext_resource type="PackedScene" uid="uid://b474wa60u2dk0" path="res://Player/upgrades/duplicator.tscn" id="15_hshwv"]
[ext_resource type="PackedScene" uid="uid://ba2hnun82p2ji" path="res://Player/attack/weapons/glaive.tscn" id="16_gpjlu"]
[ext_resource type="PackedScene" uid="uid://h64h8ykxgx46" path="res://Player/attack/weapons/thorn.tscn" id="17_8mwp6"]
[ext_resource type="PackedScene" uid="uid://dhdr3vwxy3sva" path="res://Player/upgrades/sharpener.tscn" id="18_8viyr"]
[ext_resource type="AudioStream" uid="uid://dl5j8tftvs0d3" path="res://Audio/SoundEffect/lvl_up.mp3" id="18_qemgg"]
[ext_resource type="PackedScene" uid="uid://bcbq48nrkra71" path="res://Utility/UI/weapon_icon.tscn" id="19_n471f"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_y3e3w"]
radius = 4.0
height = 16.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_00tjw"]
radius = 6.0
height = 26.0

[sub_resource type="CircleShape2D" id="CircleShape2D_7sifh"]
radius = 55.0091

[sub_resource type="CircleShape2D" id="CircleShape2D_f1er2"]

[sub_resource type="CircleShape2D" id="CircleShape2D_x3vf3"]
radius = 105.005

[node name="Player" type="CharacterBody2D" groups=["player"]]
z_index = 1
collision_layer = 2
collision_mask = 14
collision_priority = 2.0
motion_mode = 1
script = ExtResource("1_mxfy5")
item_limit = 4

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_pvsr5")
hframes = 2

[node name="Camera2D" type="Camera2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
z_index = 3
position = Vector2(2, 2)
shape = SubResource("CapsuleShape2D_y3e3w")

[node name="walkTimer" type="Timer" parent="."]
unique_name_in_owner = true
wait_time = 0.2
one_shot = true

[node name="regenTimer" type="Timer" parent="."]
wait_time = 4.0
autostart = true

[node name="Hurtbox" parent="." instance=ExtResource("3_27lpr")]
light_mask = 4
visibility_layer = 6
collision_layer = 6
collision_mask = 6

[node name="HurtboxCollisionShape2D" parent="Hurtbox" index="0"]
position = Vector2(1, 1)
shape = SubResource("CapsuleShape2D_00tjw")

[node name="DisableTimer" parent="Hurtbox" index="1"]
wait_time = 0.15

[node name="Weapons" type="Node2D" parent="."]
unique_name_in_owner = true

[node name="CurseSword" parent="Weapons" instance=ExtResource("10_lfmf2")]

[node name="Curseor" parent="Weapons" instance=ExtResource("6_gu6f8")]

[node name="Weapon_Sword" parent="Weapons" instance=ExtResource("8_lfmf2")]

[node name="Weapon_Whip" parent="Weapons" instance=ExtResource("9_pisgm")]
knockback = 0.0

[node name="Duplicator" parent="Weapons" instance=ExtResource("15_hshwv")]

[node name="Weapon_Staff" parent="Weapons" instance=ExtResource("7_dkpta")]

[node name="Bubble_Blaster" parent="Weapons" instance=ExtResource("8_p5o4e")]

[node name="BandOfRegen" parent="Weapons" instance=ExtResource("12_o28un")]

[node name="MagnetUpgrade" parent="Weapons" instance=ExtResource("11_7emwf")]

[node name="RingOfVitality" parent="Weapons" instance=ExtResource("10_pisgm")]

[node name="Chestplate" parent="Weapons" instance=ExtResource("9_gu6f8")]

[node name="CoffeeCup" parent="Weapons" instance=ExtResource("13_n471f")]

[node name="Glaive" parent="Weapons" instance=ExtResource("16_gpjlu")]

[node name="Thorn" parent="Weapons" instance=ExtResource("17_8mwp6")]

[node name="Sharpener" parent="Weapons" instance=ExtResource("18_8viyr")]

[node name="MagnetArea" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 8

[node name="MagnetCollision" type="CollisionShape2D" parent="MagnetArea"]
shape = SubResource("CircleShape2D_7sifh")
debug_color = Color(0.534178, 0.430779, 0.953008, 0.42)

[node name="CollectArea" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 8

[node name="CollectCollision" type="CollisionShape2D" parent="CollectArea"]
unique_name_in_owner = true
shape = SubResource("CircleShape2D_f1er2")
debug_color = Color(0.692839, 0.313618, 0.955726, 0.42)

[node name="KnockbackArea" type="Area2D" parent="."]
unique_name_in_owner = true
collision_layer = 4
collision_mask = 4

[node name="KnockbackCollision" type="CollisionShape2D" parent="KnockbackArea"]
shape = SubResource("CircleShape2D_x3vf3")
debug_color = Color(0.147958, 0.608802, 0.601858, 0.42)

[node name="sfx_lvl_up" type="AudioStreamPlayer2D" parent="."]
unique_name_in_owner = true
process_mode = 3
stream = ExtResource("18_qemgg")
volume_db = -18.148
pitch_scale = 1.13

[node name="GUI_layer" type="CanvasLayer" parent="."]
layer = 2

[node name="GUI" type="Control" parent="GUI_layer"]
layout_mode = 3
anchors_preset = 0
offset_right = 640.0
offset_bottom = 360.0
theme = ExtResource("7_00tjw")

[node name="HpBar" type="TextureProgressBar" parent="GUI_layer/GUI"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -135.0
offset_top = 25.0
offset_right = -10.0
offset_bottom = 35.0
grow_horizontal = 0
value = 100.0
texture_under = ExtResource("9_5htga")
texture_progress = ExtResource("10_p5o4e")

[node name="Label_hp" type="Label" parent="GUI_layer/GUI/HpBar"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -60.0
offset_top = 12.0
offset_right = 60.0
offset_bottom = 27.0
grow_horizontal = 2
rotation = -6.28319
pivot_offset = Vector2(60, 7)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 0.313726)
theme_override_constants/shadow_offset_x = 1
theme_override_constants/shadow_outline_size = 2
theme_override_font_sizes/font_size = 12
text = "Health: 100 / 100"
horizontal_alignment = 1
vertical_alignment = 1

[node name="xpBar" type="TextureProgressBar" parent="GUI_layer/GUI"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -310.0
offset_right = 310.0
offset_bottom = 20.0
grow_horizontal = 2
texture_under = ExtResource("7_i86py")
texture_progress = ExtResource("8_08krr")

[node name="Label_level" type="Label" parent="GUI_layer/GUI/xpBar"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -100.0
offset_bottom = 20.0
grow_horizontal = 0
theme_override_colors/font_shadow_color = Color(0, 0, 0, 0.313726)
theme_override_constants/shadow_offset_x = 1
theme_override_constants/shadow_outline_size = 2
text = "Level: 1"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label_stopwatch" type="Label" parent="GUI_layer/GUI"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -23.5
offset_top = 25.0
offset_right = 23.5
offset_bottom = 40.0
grow_horizontal = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 0.313726)
theme_override_constants/shadow_offset_x = 1
theme_override_constants/shadow_outline_size = 2
text = "00:00"
horizontal_alignment = 1
vertical_alignment = 1

[node name="bg" type="ColorRect" parent="GUI_layer/GUI"]
unique_name_in_owner = true
modulate = Color(1, 1, 1, 0)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="Weapon_list" type="MenuBar" parent="GUI_layer/GUI"]
unique_name_in_owner = true
visible = false
custom_minimum_size = Vector2(24, 24)
layout_mode = 1
offset_left = 10.0
offset_top = 30.0
offset_right = 10.0
offset_bottom = 30.0

[node name="WeaponIcon" parent="GUI_layer/GUI/Weapon_list" instance=ExtResource("19_n471f")]
layout_mode = 0
offset_right = 20.0
offset_bottom = 20.0

[node name="WeaponIcon2" parent="GUI_layer/GUI/Weapon_list" instance=ExtResource("19_n471f")]
layout_mode = 0
offset_left = 25.0
offset_right = 45.0
offset_bottom = 20.0

[node name="WeaponIcon3" parent="GUI_layer/GUI/Weapon_list" instance=ExtResource("19_n471f")]
layout_mode = 0
offset_left = 50.0
offset_right = 70.0
offset_bottom = 20.0

[node name="WeaponIcon4" parent="GUI_layer/GUI/Weapon_list" instance=ExtResource("19_n471f")]
layout_mode = 0
offset_left = 75.0
offset_right = 95.0
offset_bottom = 20.0

[node name="Item_list" type="MenuBar" parent="GUI_layer/GUI"]
unique_name_in_owner = true
visible = false
custom_minimum_size = Vector2(24, 24)
layout_mode = 0
offset_left = 10.0
offset_top = 60.0
offset_right = 34.0
offset_bottom = 84.0

[node name="WeaponIcon" parent="GUI_layer/GUI/Item_list" instance=ExtResource("19_n471f")]
layout_mode = 0
offset_right = 20.0
offset_bottom = 20.0

[node name="WeaponIcon2" parent="GUI_layer/GUI/Item_list" instance=ExtResource("19_n471f")]
layout_mode = 0
offset_left = 25.0
offset_right = 45.0
offset_bottom = 20.0

[node name="WeaponIcon3" parent="GUI_layer/GUI/Item_list" instance=ExtResource("19_n471f")]
layout_mode = 0
offset_left = 50.0
offset_right = 70.0
offset_bottom = 20.0

[node name="WeaponIcon4" parent="GUI_layer/GUI/Item_list" instance=ExtResource("19_n471f")]
layout_mode = 0
offset_left = 75.0
offset_right = 95.0
offset_bottom = 20.0

[node name="Label_weapons" type="Label" parent="GUI_layer/GUI"]
unique_name_in_owner = true
layout_mode = 1
offset_left = 10.0
offset_top = 25.0
offset_right = 50.0
offset_bottom = 40.0
theme_override_colors/font_shadow_color = Color(0, 0, 0, 0.313726)
theme_override_constants/shadow_offset_x = 1
theme_override_constants/shadow_outline_size = 2
theme_override_font_sizes/font_size = 12
text = "Weapons: 0 / 4"

[node name="Lable_powerups" type="Label" parent="GUI_layer/GUI"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 10.0
offset_top = 35.0
offset_right = 142.0
offset_bottom = 50.0
theme_override_colors/font_shadow_color = Color(0, 0, 0, 0.313726)
theme_override_constants/shadow_offset_x = 1
theme_override_constants/shadow_outline_size = 2
theme_override_font_sizes/font_size = 12
text = "Upgrades: 0 / 4"

[node name="LevelUp_select" type="Panel" parent="GUI_layer/GUI"]
unique_name_in_owner = true
process_mode = 2
visible = false
custom_minimum_size = Vector2(200, 240)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -100.0
offset_top = 280.0
offset_right = 100.0
offset_bottom = 520.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(100, 0)
theme = ExtResource("7_00tjw")

[node name="Label_levelup" type="Label" parent="GUI_layer/GUI/LevelUp_select"]
unique_name_in_owner = true
custom_minimum_size = Vector2(200, 0)
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -100.0
offset_right = 100.0
offset_bottom = 23.0
grow_horizontal = 2
text = "Level up!"
horizontal_alignment = 1

[node name="LevelUp_choices" type="MenuBar" parent="GUI_layer/GUI/LevelUp_select"]
unique_name_in_owner = true
custom_minimum_size = Vector2(200, 240)
layout_mode = 0
offset_right = 147.0
offset_bottom = 182.0

[node name="GameOver" type="Control" parent="GUI_layer/GUI"]
process_mode = 2
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 500.0
offset_bottom = 500.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label_game_over" type="Label" parent="GUI_layer/GUI/GameOver"]
unique_name_in_owner = true
process_mode = 2
modulate = Color(1, 1, 1, 0)
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -42.5
offset_top = 60.0
offset_right = 42.5
offset_bottom = 75.0
grow_horizontal = 2
pivot_offset = Vector2(171, 29)
theme_override_colors/font_color = Color(1, 0, 0, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 3
theme_override_constants/shadow_offset_y = 3
theme_override_font_sizes/font_size = 65
text = "GAME OVER"
horizontal_alignment = 1
vertical_alignment = 1

[node name="TryAgainButton" type="Button" parent="GUI_layer/GUI/GameOver"]
unique_name_in_owner = true
process_mode = 2
custom_minimum_size = Vector2(150, 0)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -62.5
offset_top = -20.0
offset_right = 62.5
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(62, 20)

[node name="Label" type="Label" parent="GUI_layer/GUI/GameOver/TryAgainButton"]
process_mode = 2
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -7.5
offset_right = 20.0
offset_bottom = 7.5
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 24
text = "Try again"
horizontal_alignment = 1
vertical_alignment = 1

[node name="MainMenuButton" type="Button" parent="GUI_layer/GUI/GameOver"]
unique_name_in_owner = true
process_mode = 2
custom_minimum_size = Vector2(150, 0)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -62.5
offset_top = 35.0
offset_right = 62.5
offset_bottom = 75.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(62, 20)

[node name="Label" type="Label" parent="GUI_layer/GUI/GameOver/MainMenuButton"]
process_mode = 2
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -7.5
offset_right = 20.0
offset_bottom = 7.5
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 24
text = "Main Menu"
horizontal_alignment = 1
vertical_alignment = 1

[node name="PauseMenu" parent="GUI_layer/GUI" instance=ExtResource("15_dkpta")]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = 30.0
offset_top = -85.0
offset_right = 150.0
offset_bottom = 85.0
grow_horizontal = 0
grow_vertical = 2

[connection signal="died" from="." to="." method="_on_died"]
[connection signal="timeout" from="regenTimer" to="." method="_on_regen_timer_timeout"]
[connection signal="area_entered" from="Hurtbox" to="." method="_on_hurtbox_area_entered"]
[connection signal="hurt" from="Hurtbox" to="." method="_on_hurtbox_hurt"]
[connection signal="area_entered" from="MagnetArea" to="." method="_on_magnet_area_area_entered"]
[connection signal="area_entered" from="CollectArea" to="." method="_on_collect_area_area_entered"]
[connection signal="pressed" from="GUI_layer/GUI/GameOver/TryAgainButton" to="." method="_on_try_again_button_pressed"]
[connection signal="pressed" from="GUI_layer/GUI/GameOver/MainMenuButton" to="." method="_on_main_menu_button_pressed"]
[connection signal="pressed" from="GUI_layer/GUI/PauseMenu/ResumeButton" to="." method="_on_resume_button_pressed"]

[editable path="Hurtbox"]
[editable path="GUI_layer/GUI/PauseMenu"]
[editable path="GUI_layer/GUI/PauseMenu/Settings"]
